--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "busboy": "^1.6.0",
     "cheerio": "^1.1.0",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "flyonui": "^2.1.0",
@@ -28,6 +29,7 @@
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
+    "openai": "^6.0.1",
     "path": "^0.12.7",
     "preline": "^3.0.1",
     "tailwindcss": "^4.1.7",
